--- a/ios-developer.html
+++ b/ios-developer.html
@@ -116,7 +116,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://holycodedoo.applytojob.com/apply/kN74wiiMCD/IOS-Developer-Oviva-Team'>iOS Developer - Oviva Team - Holycode - Career Page</a></h5> 
+<h5><a href='http://holycodedoo.applytojob.com/apply/kN74wiiMCD/IOS-Developer-Oviva-Team'>iOS Developer - Oviva Team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -177,7 +177,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-6682019-ios-developer'>
+<h5><a href='https://syone2.recruitee.com/o/ref-6682019-ios-developer'>
       (Ref. 668/2019)  iOS Developer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -191,11 +191,11 @@ vehicle?...</p>
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rappi/4ca70a0b-0e6e-4a2e-ab14-f1dd07039a1c'>Rappi - Senior iOS Developer - Pagos y Fraude</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/4ca70a0b-0e6e-4a2e-ab14-f1dd07039a1c'>Rappi - Senior iOS Developer - Pagos y Fraude</a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://redspace.recruiterbox.com/jobs/fk031y1'>
+<h5><a href='https://redspace.recruiterbox.com/jobs/fk031y1'>
     iOS Developer at REDspace
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -209,7 +209,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nYGacMwh'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nYGacMwh'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -293,7 +293,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<h5><a href='https://semios.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -398,7 +398,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/highrise/cdf78851-9c72-4eee-bdd1-bcbdf927334d/apply'>Highrise - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/highrise/cdf78851-9c72-4eee-bdd1-bcbdf927334d/apply'>Highrise - iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... As part of your application, we'd love to hear what you think are some of the best 
 designed apps (in terms of technical design) and why. This is open ended and?...</p>
@@ -445,7 +445,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Schaumburg, IL</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PushBotsInc/743999696525212-ios-developer-remote-'>PushBots, Inc. iOS Developer (remote) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PushBotsInc/743999696525212-ios-developer-remote-'>PushBots, Inc. iOS Developer (remote) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
