--- a/software.html
+++ b/software.html
@@ -39,20 +39,36 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/smarkets/jobs/1485264'>Job Application for Software Engineer Graduates 2020 at Smarkets</a></h5> 
+<h5><a href='https://www.applythis.net/job/?a=821A86E18.0'>
+	
+    Apply for Senior Software Developer -  Greater Manchester, United Kingdom - IT and Internet - Seni-Pzljrp-Laura - Find a job, build a career
+
+</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://www.sentenial.com/careers/senior-software-engineer/'>Senior Software Engineer, Ireland | Sentenial</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/smarkets/jobs/1485264'>Job Application for Software Engineer Graduates 2020 at Smarkets</a></h5> 
+<p><span class="badge badge-light">London London Los Angeles</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/smarkets/jobs/1920658'>Job Application for Software Engineering Internship 2020 at Smarkets</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/acommerce/jobs/1912812'>Job Application for Software Engineer at aCommerce</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Thailand Bangkok</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698570776-senior-software-engineer-backend-coverage-connection-excellence-team-m-f-d-'>Omio Senior Software Engineer - Backend/ Coverage/ Connection Excellence Team (m / f / d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/storj/jobs/4468724002'>Job Application for Software Engineer, Marketing Technology at Storj</a></h5> 
@@ -115,11 +131,11 @@
 <p><span class="badge badge-light">Chennai, Tamil Nadu, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/senior-software-engineer-27555'>Senior Software Engineer - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/senior-software-engineer-27555'>Senior Software Engineer - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineering-lead-27559'>Software Engineering Lead - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineering-lead-27559'>Software Engineering Lead - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Chennai, Tamil Nadu, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -239,7 +255,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/signalfx/9c2d4227-ce0f-4620-bd0d-8c831b0e4b21'>SignalFx - Software Engineer in Test, APIs</a></h5> 
+<h5><a href='https://jobs.lever.co/signalfx/9c2d4227-ce0f-4620-bd0d-8c831b0e4b21'>SignalFx - Software Engineer in Test, APIs</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -297,7 +313,7 @@
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=2748acb81'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=2748acb81'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -417,7 +433,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/principal-software-engineer--authentication--1575126/?gh_src=82a8057f1'>Principal Software Engineer -Authentication | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/principal-software-engineer--authentication--1575126/?gh_src=82a8057f1'>Principal Software Engineer -Authentication | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -425,19 +441,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/staff-software-engineer---advanced-applications-1880241/?gh_src=82a8057f1'>Staff Software Engineer - Advanced Applications | Okta</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-in-test-zero-trust-senior-staff-1901131/?gh_src=82a8057f1'>Software Engineer in Test, Zero Trust (Senior/Staff) | Okta</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior--staff--principal-1650474/?gh_src=82a8057f1'>Software Engineer, Security (Senior/ Staff/ Principal) | Okta</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-technical-services-senior---staff-1875199/?gh_src=82a8057f1'>Software Engineer, Technical Services (Senior / Staff) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/staff-software-engineer---advanced-applications-1880241/?gh_src=82a8057f1'>Staff Software Engineer - Advanced Applications | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
