--- a/deep-learning.html
+++ b/deep-learning.html
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://airy3d.recruitee.com/o/research-scientist-computer-vision-and-deep-learning'>
+<h5><a href='https://airy3d.recruitee.com/o/research-scientist-computer-vision-and-deep-learning'>
       Research Scientist ? Computer Vision and Deep Learning - Airy3D
     </a></h5> 
 <p><span class="badge badge-light">Montreal, Canada</span></p>
@@ -114,7 +114,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999697840026-senior-deep-learning-software-engineer'>Run:AI Senior Deep-Learning Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999697840026-senior-deep-learning-software-engineer'>Run:AI Senior Deep-Learning Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Tel Aviv-Yafo, Israel</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -126,7 +126,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tencent/jobs/4473234002'>Job Application for Deep Learning Framework Research Engineer at Tencent</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4473234002'>Job Application for Deep Learning Framework Research Engineer at Tencent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -232,7 +232,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qT59VfwM&k=Job&j=ojwP9fwx&__jvst=Employee+Referral&__jvsd=syBINgwp&__jvsc=Twitter&bid=n3FMWMwH'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qT59VfwM&k=Job&j=ojwP9fwx&__jvst=Employee+Referral&__jvsd=syBINgwp&__jvsc=Twitter&bid=n3FMWMwH'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
@@ -276,11 +276,11 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 Autonomous Vehicles. If you're a creative and autonomous computer scientist 
 with a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/33joizypm53wyo7czhtqqsfhua'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/33joizypm53wyo7czhtqqsfhua'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6sbrdkwb94xno4uikwmox8f6yr'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6sbrdkwb94xno4uikwmox8f6yr'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -316,7 +316,7 @@ with a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
+<h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -329,7 +329,7 @@ with a?...</p>
 <p>Sep 9, 2019 ... We are looking for talented software engineers and computer architects to help 
 design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p>
 <hr/>
-<h5><a href='https://saicusa.workable.com/j/4A814C43A5'>SAIC Innovation Center - Jobs: Research Engineer, Computer Vision/Deep Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://saicusa.workable.com/j/4A814C43A5'>SAIC Innovation Center - Jobs: Research Engineer, Computer Vision/Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -414,7 +414,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/B14ED31745'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/B14ED31745'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -490,12 +490,12 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern---Content---Technology--Winter-Spring-2020-_JR1923762-2'>Deep Learning Intern - Content & Technology (Winter/Spring 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern---Content---Technology--Winter-Spring-2020-_JR1923762-2'>Deep Learning Intern - Content & Technology (Winter/Spring 2020)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... Developer Technology Intern - AI | Canada, Toronto ? Deep Learning Intern ... 
 Compute Performance Developer Technology Intern - CUDA | Canada, Toronto.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Research-Scientist-Intern---Deep-Learning_JR1923743'>Research Scientist Intern - Deep Learning</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Research-Scientist-Intern---Deep-Learning_JR1923743'>Research Scientist Intern - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... We are now looking for a Research Scientist Intern ? Deep Learning. NVIDIA is 
 searching for a world-class researcher to join our research team. We are?...</p>
